--- a/server-side/service/service.csproj
+++ b/server-side/service/service.csproj
@@ -40,7 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mockups\administratorMockup.cs" />
+    <Compile Include="Mockups\authorMockup.cs" />
     <Compile Include="Mockups\booksMockup.cs" />
+    <Compile Include="Models\Administrator.cs" />
+    <Compile Include="Models\Author.cs" />
     <Compile Include="Models\Books.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
