--- a/server-side/server-side/server-side.csproj
+++ b/server-side/server-side/server-side.csproj
@@ -251,6 +251,7 @@
     <Content Include="Views\Books\books.cshtml" />
     <Content Include="Views\LogIn\logIn.cshtml" />
     <Content Include="Views\Books\bookDetails.cshtml" />
+    <Content Include="Views\Authors\authorDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
