--- a/server-side/server-side/Web.config
+++ b/server-side/server-side/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-server-side-20170210112857.mdf;Initial Catalog=aspnet-server-side-20170210112857;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="projectmanager" connectionString="Server=[swagbase.cxc8pzxwptru.eu-west-1.rds.amazonaws.com]; Database=[]; userId = [jakke]; Password = [Swagswag1];" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
