--- a/server-side/server-side/bin/server-side.dll.config
+++ b/server-side/server-side/bin/server-side.dll.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-server-side-20170210112857.mdf;Initial Catalog=aspnet-server-side-20170210112857;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="projectmanager" connectionString="Server=[servername];
+Database=[databasename]; userId = [user id]; Password = [password];" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
