--- a/server-side/server-side/server-side.csproj
+++ b/server-side/server-side/server-side.csproj
@@ -236,7 +236,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -252,6 +254,7 @@
     <Content Include="Views\LogIn\logIn.cshtml" />
     <Content Include="Views\Books\bookDetails.cshtml" />
     <Content Include="Views\Authors\authorDetails.cshtml" />
+    <Content Include="Views\Administrator\administratorDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
