--- a/service/service.csproj
+++ b/service/service.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=5.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.5.2.0\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,12 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\AutomapperConfig.cs" />
+    <Compile Include="Configuration\ToAuthorProfile.cs" />
+    <Compile Include="Configuration\ToBookProfile.cs" />
+    <Compile Include="Configuration\ToClassificationProfile.cs" />
     <Compile Include="Mockups\administratorMockup.cs" />
     <Compile Include="Mockups\authorMockup.cs" />
     <Compile Include="Mockups\booksMockup.cs" />
     <Compile Include="Models\Administrator.cs" />
     <Compile Include="Models\Author.cs" />
     <Compile Include="Models\Books.cs" />
+    <Compile Include="Models\Classification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -53,6 +62,9 @@
       <Project>{cd940971-9102-45f0-ac7c-c053b18b9c72}</Project>
       <Name>repository</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
