--- a/server-side/Web.config
+++ b/server-side/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="dbtestEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=dbtest;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="swagbaseEntities" connectionString="metadata=res://*/Model2.csdl|res://*/Model2.ssdl|res://*/Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=swagbase.cxc8pzxwptru.eu-west-1.rds.amazonaws.com;initial catalog=swagbase;user id=jakke;password=Swagswag1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="swagbaseEntities1" connectionString="metadata=res://*/swagbase.csdl|res://*/swagbase.ssdl|res://*/swagbase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=swagbase.cxc8pzxwptru.eu-west-1.rds.amazonaws.com;initial catalog=swagbase;user id=jakke;password=Swagswag1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
