Nu ser vi alla böcker tillhörande en författare, och författare tillhörande en bok

--- a/service/service.csproj
+++ b/service/service.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Models\Author.cs" />
     <Compile Include="Models\Books.cs" />
     <Compile Include="Models\Classification.cs" />
+    <Compile Include="Models\viewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
