--- a/server-side/server-side.csproj
+++ b/server-side/server-side.csproj
@@ -265,6 +265,7 @@
     <Content Include="Views\Books\bookDetails.cshtml" />
     <Content Include="Views\Authors\authorDetails.cshtml" />
     <Content Include="Views\Administrator\administratorDetails.cshtml" />
+    <Content Include="Views\Books\createBook.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
