--- a/server-side/server-side.csproj
+++ b/server-side/server-side.csproj
@@ -268,6 +268,7 @@
     <Content Include="Views\Books\createBook.cshtml" />
     <Content Include="Views\Books\editBook.cshtml" />
     <Content Include="Views\Authors\editAuthor.cshtml" />
+    <Content Include="Views\Authors\createAuthor.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
