--- a/server-side/server-side.csproj
+++ b/server-side/server-side.csproj
@@ -203,6 +203,7 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Controllers\AccessDeniedController.cs" />
     <Compile Include="Controllers\AdministratorController.cs" />
     <Compile Include="Controllers\AuthorsController.cs" />
     <Compile Include="Controllers\BooksController.cs" />
@@ -269,6 +270,8 @@
     <Content Include="Views\Books\editBook.cshtml" />
     <Content Include="Views\Authors\editAuthor.cshtml" />
     <Content Include="Views\Authors\createAuthor.cshtml" />
+    <Content Include="Views\AccessDenied\acessDenied.cshtml" />
+    <Content Include="Views\LogIn\loggedInScreen.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
