Hämta admins och småredigera admins funkar nu, snart är inloggen klar också

--- a/server-side/server-side.csproj
+++ b/server-side/server-side.csproj
@@ -272,6 +272,7 @@
     <Content Include="Views\Authors\createAuthor.cshtml" />
     <Content Include="Views\AccessDenied\acessDenied.cshtml" />
     <Content Include="Views\LogIn\loggedInScreen.cshtml" />
+    <Content Include="Views\Administrator\editAdministrator.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
