--- a/service/service.csproj
+++ b/service/service.csproj
@@ -94,7 +94,7 @@
     <Compile Include="Models\Administrator.cs" />
     <Compile Include="Models\Author.cs" />
     <Compile Include="Models\Books.cs" />
-    <Compile Include="Security\Classification.cs" />
+    <Compile Include="Models\Classification.cs" />
     <Compile Include="Models\viewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\CustomAuthorizeAttribute.cs" />
